feat: add comprehensive Java JVM and multi-threading practice tasks, solutions, and documentation.